--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
         <ul class="list-inline text-center">
           <li class="list-inline-item">
             <a href="https://vk.com/club130416798">
-              <img width="50" height="50" src="img/vkontakte-ic.png">
+              <img width="50" height="50" src="images/vkontakte-ic.png">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="http://instagram.com/sonsofthefatherland">
-              <img width="50" height="50" src="img/instagram-ic.png">
+              <img width="50" height="50" src="images/instagram-ic.png">
             </a>
           </li>
         </ul>
