--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,12 @@
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('images/about-bg.jpg')">
+<header class="masthead" style="background-image: url('{{ site.baseurl }}/images/about-bg.jpg')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="page-heading">
-          <h1>Сыны Отечества</h1>
-          <span class="subheading">
-          Наша молодежь - это наше будущее! И чем больше полезных навыков мы приобщим ей, тем уверенней будет наше будущее!
-          </span>
+          <h1>Title</h1>
+          <span class="subheading">Subtitle</span>
         </div>
       </div>
     </div>
