--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Томская региональная спортивно-патриотическая общественная организация «Сыны Отечества» Является региональным представителем «Совета ветеранов подразделений специального назначения»</p>
+          <p>{{ content }}</p>
         </div>
       </div>
     </div>
