--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,14 @@
 ---
 layout: default
 ---
+<h1>{{ page.title }}</h1>
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<div class="entry">
+  {{ content }}
+</div>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+<div class="date">
+  Дана публикации: {{ page.date | date: "%B %e, %Y" }}
+</div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
-  {% include disqus.html %}
-</article>
+{% include disqus.html %}
