--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="page-heading">
-          <h1>Title</h1>
-          <span class="subheading">Subtitle</span>
+          <h1>{{ page.title }}</h1>
+          <span class="subheading">Subtitle {{ page.subtitle }}</span>
         </div>
       </div>
     </div>
