--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('{{ site.baseurl }}/images/about-bg.jpg')">
+<header class="masthead" style="background-image: url('{{ site.baseurl }}/images/{{ page.image }}')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
