--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="page-heading">
           <h1>{{ page.title }}</h1>
-          <span class="subheading">Subtitle {{ page.subtitle }}</span>
+          <span class="subheading">{{ page.description }}</span>
         </div>
       </div>
     </div>
