--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Главная</a>
+        <a class="navbar-brand" href="{{ site.baseurl }}">Главная</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Меню
           <i class="fa fa-bars"></i>
@@ -12,7 +12,7 @@
               <a class="nav-link" href="https://vk.com/club130416798">Блог</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ site.baseurl }}/contact.html">Контакты</a>
+              <a class="nav-link" href="{{ site.baseurl }}/contacts">Контакты</a>
             </li>
           </ul>
         </div>
