--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://vk.com/club130416798">Блог</a>
+          <a class="nav-link" href="{{ site.baseurl }}/blog">Блог</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.baseurl }}/contacts">Контакты</a>
