--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,5 +39,9 @@
     {% include footer.html %}
     {% include analytics.html %}
 
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{ site.baseurl }}/vendor/jquery/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    
   </body>
 </html>
