--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{{ site.baseurl }}/vendor/jquery/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    
+
+    <!-- Vkontakte share button -->
+    <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
+
   </body>
 </html>
