--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template -->
     <link href="{{ site.baseurl }}/vendor/css/clean-blog.min.css" rel="stylesheet">
 
+    <!-- Vkontakte Share Button -->
+    <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
+
   </head>
 
   <body>
@@ -42,9 +45,6 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{{ site.baseurl }}/vendor/jquery/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Vkontakte share button -->
-    <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
 
   </body>
 </html>
