--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,4 @@ layout: default
 ---
 {{ content }}
 <hr>
-<script type="text/javascript"><!--document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));--></script>
+<script type="text/javascript">document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));</script>
