--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,12 @@ layout: default
 {{ content }}
 <hr>
 <script type="text/javascript">document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));</script>
+
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
