--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   document.write(VK.Share.button({
     url: '{{ page.url }}',
     title: '{{ page.title }}',
-    noparse: true
+    noparse: false
   }));
 </script>
 <br>
