--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
   document.write(VK.Share.button({
     url: '{{ page.url }}',
     title: '{{ page.title }}',
+    image: '{{ page.image }}',
     noparse: false
   }));
 </script>
