--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <br>
 <script type="text/javascript">
   document.write(VK.Share.button(
-    {url: '{{ page.url }}', title: '{{ page.title }}', image: '{{ page.image }}', noparse: false},
+    {url: '{{ page.url }}', title: '{{ page.title }}', noparse: false},
     {type: "round_nocount", text: "Поделиться"})
   ));
 </script>
