--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 <br>
 <script type="text/javascript">
   document.write(VK.Share.button(
-    {url: '{{ page.url }}', title: '{{ page.title }}', noparse: false},
-    {type: "round_nocount", text: "Поделиться"})
+    {url: '{{ page.url }}', title: '{{ page.title }}'},
+    {type: 'custom', text: '<img src="http://vk.com/images/vk32.png" />'}
   ));
 </script>
 <br>
