--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 <script type="text/javascript">
   document.write(VK.Share.button(
     {url: '{{ page.url }}', title: '{{ page.title }}'},
-    {type: 'custom', text: '<img src="http://vk.com/images/vk32.png" />'}
+    {type: 'round_nocount', text: 'Поделиться'}
   ));
 </script>
 <br>
