--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 <br>
 <script type="text/javascript">
   document.write(VK.Share.button(
-    {url: '{{ page.url }}', title: '{{ page.title }}'},
+    false,
+    <!-- {url: '{{ page.url }}', title: '{{ page.title }}'}, -->
     {type: 'round_nocount', text: 'Поделиться'}
   ));
 </script>
