--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <!-- Vkontakte Share Button -->
     <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
     <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/{{ page.image }}" />
+    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/images/{{ page.image }}" />
 
   </head>
 
