--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,20 +10,11 @@ layout: default
   ));
 </script>
 <br>
-<div class="PageNavigation">
-  {% if page.previous.url %}
-    <a class="prev" href="{{ site.baseurl }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-  {% endif %}
-  {% if page.next.url %}
-    <a class="next" href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-  {% endif %}
-</div>
-
 <div class="row">
   {% if page.previous.url %}
-    <div class="col-sm-5 col-md-6"><a class="prev" href="{{ site.baseurl }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a></div>
+    <div class="col-sm-5"><a class="prev" href="{{ site.baseurl }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a></div>
   {% endif %}
   {% if page.next.url %}
-    <div class="col-sm-5 col-sm-offset-2 col-md-6 col-md-offset-0"><a class="next" href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a></div>
+    <div class="col-sm-5 col-sm-offset-3"><a class="next" href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a></div>
   {% endif %}
 </div>
