--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,14 @@ layout: default
 </script>
 <br>
 <div class="row">
-  {% if page.previous.url %}
-    <div class="col-sm-5"><a class="prev" href="{{ site.baseurl }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a></div>
-  {% endif %}
-  {% if page.next.url %}
-    <div class="col-sm-5 col-sm-offset-5"><a class="next" href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a></div>
-  {% endif %}
+  <div class="col-sm-5">
+    {% if page.previous.url %}
+      <a class="prev" href="{{ site.baseurl }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+    {% endif %}
+  </div>
+  <div class="col-sm-5 col-sm-offset-5">
+    {% if page.next.url %}
+      <a class="next" href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+    {% endif %}
+  </div>
 </div>
