--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,6 @@ layout: default
   </div>
 </div>
 <br>
-<script type="text/javascript">VK.Widgets.Comments("vk_comments", {limit: 5, attach: false});</script>
-<br>
+<!-- <script type="text/javascript">VK.Widgets.Comments("vk_comments", {limit: 5, attach: false});</script> -->
+<!-- <br> -->
 {% include disqus.html %}
