--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/images/{{ page.image }}" />
     
-    <script type="text/javascript" src="//vk.com/js/api/openapi.js?152"></script>
-    <script type="text/javascript">VK.init({apiId: API_ID, onlyWidgets: true});</script>
+<!--     <script type="text/javascript" src="//vk.com/js/api/openapi.js?152"></script>
+     <script type="text/javascript">VK.init({apiId: API_ID, onlyWidgets: true});</script> -->
 
   </head>
 
